
classDiagram
    class Main {
        +main() str
    }
    class SQLInjection {
        +test_injection(url: str) bool
        +exploit(url: str) str
    }
    class XSSExploit {
        +test_xss(url: str) bool
        +exploit(url: str) str
    }
    class AuthTest {
        +test_auth(url: str) bool
        +exploit(url: str) str
    }
    Main --> SQLInjection
    Main --> XSSExploit
    Main --> AuthTest
